--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -42,7 +42,7 @@
         </select>
         <br>
 
-        <label>お問い合わせ内容</label>
+        <label>おすすめする理由</label>
         <textarea></textarea>
         <br>
 
@@ -51,7 +51,7 @@
         <label>その他</label><input type="radio" name="gender">
         <br>
 
-        <lable>利用規約に同意</lable>
+        <lable>個人情報保護方針に同意する</lable>
         <input type="checkbox">
         <br>
         <br>
@@ -63,7 +63,7 @@
     </article>
     <article>
       <h2>テクノロジー</h2>
-      <select>
+      <section>
         <h3>SAMURAIが新しい動画をリリース</h3>
         <p>SAMURAI公式YouTubeで新しい動画がリリースされました。</p><br>
         <p>動画の内容はHTML/CSSの解説です</p>
@@ -72,7 +72,7 @@
         <iframe  src="https://www.youtube.com/embed/2JLiGSUohEo?si=25A4nl4SbpJL7-l5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
           
         </iframe>
-      </select>
+      </section>
     </article>
   </main>
   <footer>
