--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -30,7 +30,7 @@
         <h3>私のおすすめ和菓子アンケートフォーム</h3>
         <form>
           <label>氏名</label>
-          <input type="text" placeholder="名前を入力してください">
+          <input type="text" placeholder="みたらし団子">
           <br>
 
         <label>年代</label>
