--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -30,7 +30,7 @@
         <h3>私のおすすめ和菓子アンケートフォーム</h3>
         <form>
           <label>氏名</label>
-          <input type="text" placeholder="みたらし団子">
+          <input type="text" placeholder="名前を入力してください">
           <br>
 
         <label>年代</label>
@@ -42,7 +42,11 @@
         </select>
         <br>
 
-        <label>おすすめする理由</label>
+        <form>
+          <label>おすすめ和菓子の名称</label>
+          <input type="text" placeholder="みたらし団子">
+        <br>
+　　　　<label>おすすめする理由</label>
         <textarea></textarea>
         <br>
 
