--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -41,8 +41,7 @@
           <option>40代以上</option>
         </select>
         <br>
-
-        <form>
+          
           <label>おすすめ和菓子の名称</label>
           <input type="text" placeholder="みたらし団子">
         <br>
@@ -55,7 +54,7 @@
         <label>その他</label><input type="radio" name="gender">
         <br>
 
-        <lable>個人情報保護方針に同意する</lable>
+        <label>個人情報保護方針に同意する</label>
         <input type="checkbox">
         <br>
         <br>
